--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,13 @@ dependencies:
   hive: ^2.0.5
   path_provider: ^2.0.8
   connectivity_plus: ^2.2.0
+  sqflite: ^2.0.2
+  objectbox: ^1.3.0
+  objectbox_generator: ^1.3.0
+  objectbox_flutter_libs: ^1.3.0
 
 dev_dependencies:
+  build_runner: ^2.1.7
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
